SusiMail: Better handling of no subject Better spacing display in text Recognize more re: and fwd: CSS wrap fix

--- a/installer/resources/themes/susimail/light/susimail.css
+++ b/installer/resources/themes/susimail/light/susimail.css
@@ -356,7 +356,7 @@ table#mailbox {
 
 #mailbox td:nth-child(5) {
      white-space: normal;
-     word-break: break-all;
+     word-break: normal;
 }
 
 #mailbox th:last-child, #mailbox td:nth-child(4) {
